# SoftwareRenderer

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: Matrix.h  bound3.h  buffer.h  camera.h  canvas.h  displayManager.h  engine.h  geometry.h  inputManager.h  light.h  matrix.h  mesh.h  model.h  modelLoader.h  objParser.h  rasterizer.h  renderData.h  renderManager.h  scene.h  sceneManager.h  shader.h  softwareRenderer.h  texture.h  vector3.h  vector3D.h  windowManager.h
models/: .FireHydrantMesh.obj.swp  .elephant.obj.swp  .teapot.obj.swp  cessna.mtl  dragon.mtl  teapot.mtl
modules/: FindSDL2.cmake
scenes/NormalTangentTest/: NormalTangentTestPlatform_high.mtl
scenes/cerberus/: cerberus_config.txt
scenes/chest/: chest_config.txt
scenes/firehydrant/: firehydrant_config.txt
scenes/multipleMesh/: multipleMesh_config.txt
scenes/old_scenes/bunny/: bunny.mtl
scenes/old_scenes/cow/: cow.mtl
scenes/statue/: statue_config.txt
scenes/teapot/: teapot.mtl  teapot_config.txt
scenes/teapotMetal/: .teapot_mesh.obj.swp  teapotMetal_config.txt  teapot_mesh.mtl
scenes/teapotMultiMaterial/: teapotMultiMaterial_config.txt
scenes/teapotMultiMaterial/meshes/: gun_mesh.mtl
scenes/teapotSingle/: teapotSingle_config.txt
src/: camera.cpp  displayManager.cpp  engine.cpp  geometry.cpp  inputManager.cpp  main.cpp  matrix.cpp  mesh.cpp  model.cpp  objParser.cpp  rasterizer.cpp  renderManager.cpp  scene.cpp  sceneManager.cpp  softwareRenderer.cpp  texture.cpp  vector.cpp  vector3.cpp  windowManager.cpp
